--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js"
-  }, 
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AdelHasan/goaltracker.git"
@@ -21,6 +21,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.3.2"
   },
   "devDependencies": {
